fixed vertical margin on mobile

--- a/main.css
+++ b/main.css
@@ -24,7 +24,7 @@ h2 {
 
 .container {
     max-width: 600px;
-    margin: 200px auto;
+    margin: 10vw auto;
     padding: 0 .5rem;
 }
 
